Fixed horizontal scrolling on home page left sidebar

--- a/src/assets/scss/pages/_page-home.scss
+++ b/src/assets/scss/pages/_page-home.scss
@@ -29,6 +29,7 @@
     position: fixed;
     justify-self: stretch;
     overflow-y: scroll;
+    overflow-x: hidden;
     max-width: 40vw;
     height: 100vh;
     padding: 0 40px 64px 40px;
